Leasing media in Picker
Make it possible to attach postings to remote media. Lease media in
Picker if it is larger that posting.media.max-size.